@@ -3,6 +3,15 @@
 	Backport from mainline.
 	2020-04-01  Tamar Christina  <tamar.christina@arm.com>
 
+	PR ld/16017
+	* elf32-arm.c (elf32_arm_populate_plt_entry): Set LSB of the PLT0
+	address in the GOT if in thumb only mode.
+
+2020-04-08  Tamar Christina  <tamar.christina@arm.com>
+
+	Backport from mainline.
+	2020-04-01  Tamar Christina  <tamar.christina@arm.com>
+
 	* elf32-arm.c (elf32_thumb2_plt_entry): Fix PC-rel offset.
 
 2020-03-30  Alan Modra  <amodra@gmail.com>
